@@ -17,7 +17,6 @@
 	border: 1px solid #ffa500;
 	color: black;
 	font-weight: bold;
-	margin: 2em 0 1em;
 	padding: .5em 1em;
 	vertical-align: middle;
 }
